[metadata]
name = linode-dynamic-dns
description = Dynamically set the IP of Linode DNS records
version = 0.7.0
url = https://github.com/nvllsvm/linode-dynamic-dns
author = Andrew Rabert
author_email = ar@nullsum.net
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
py_modules = linode_dynamic_dns

[options.entry_points]
console_scripts =
    linode-dynamic-dns = linode_dynamic_dns:main
